# freebsd-binaries

./: .gitignore  build.py  containers.yaml  dispatch.yaml  generate.py  go.mod  go.py  go.sum  matrix.py  projects.yaml  pyproject.toml  workflow.py
.github/scripts/: setup-freebsd.sh
.github/workflows/: build.yaml  containers.yaml  dispatch-0.yaml  dispatch-1.yaml  dispatch.yaml  packages.yaml
akr/: freebsd.patch
builder/: config.py  container.py  go.py  matrix.py  package.py  utils.py
dnsname/: freebsd.patch
samba-ldap/root/templates/: smb4.conf
samba-ldap/root/usr/local/etc/: groundcontrol.toml
sing-box/: freebsd.patch
zellij/: freebsd.patch
